@@ -32,6 +32,7 @@ Version 1.0.xxx (July xxth 2013)
 - Removed: Device Type on Temperature/Weather tab
 - Fixed: YouLess meter structure
 - Changed: Dim Slider for mobile items now smaller
+- Fixed: Scenes table now includes pagination at the bottom
 
 Version 1.0.762 (July 1th 2013)
 - Changed: Motion Sensors, Off delay now sends 'Off' to Lighting 1/6 devices, and 'No Motion' to X10 motion sensors
